# telegram-currency-bot-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
bot/: __init__.py
bot/config/: __init__.py
bot/handlers/: __init__.py  async_functions.py  commands.py
collectors/: __init__.py  api_collector.py  base_collector.py  scrapper_collector.py
cron/: daily_job.py
data/: currency_data.sqlite
database/: __init__.py  db_helpers.py  db_utils.py  models.py
jobs/: __init__.py  daily_job.py
services/: data_processing.py
tests/: test_collectors.py
utils/: __init__.py  config.py  formatters.py  logger.py
