[project]
name = "telegram-currency-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "playwright>=1.51.0",
    "pytelegrambotapi>=4.26.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]
